Fixed bugg with visible remainder

--- a/static/src/main/webapp/css/structure.css
+++ b/static/src/main/webapp/css/structure.css
@@ -47,7 +47,6 @@
     width: 48px;
     height: 48px;
     position: absolute;
-    z-index: 5;
 }
 
 .visible-remainder {
@@ -56,6 +55,7 @@
     position: absolute;
     background-color: sandybrown;
     opacity: 0.1;
+    z-index: -1;
 }
 
 .multiple-plants {
